--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Digital Clock</title>
   <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="icon" type="image/x-icon" href="favicon.png">
 </head>
 <body>
   <div class="clock">
@@ -14,7 +15,7 @@
     <ul id="alarmList" class="alarm-list"></ul>
   </div>
 
-  <audio id="alarmAudio" src="alarm.mp3"></audio>
+  <audio id="alarmAudio" src="sound.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
