--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul id="alarmList" class="alarm-list"></ul>
   </div>
 
-  <audio id="alarmAudio" src="sound.mp3"></audio>
+  <audio id="alarmAudio" src="alarm.mp3"></audio>
 
   <script src="script.js"></script>
 </body>
